--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy lasad" />
+    <meta name="author" content="Yuriy zudikhin" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -15,24 +15,24 @@
     <header class="header anime">
       <div class="container">
         <div class="header_block">
-          <a class="header_block_logo" href="https://lasad.github.io/casaverse/">
+          <a class="header_block_logo" href="https://zudikhin.github.io/casaverse/">
             <img src="img/header/logo.svg" alt="">
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://lasad.github.io/casaverse/">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -41,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="https://lasad.github.io/casaverse/contacts.html">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -50,19 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://lasad.github.io/casaverse/">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -84,7 +84,7 @@
               </svg>
             </div>
             <div class="main_block_text_bottom">
-              <a href="https://lasad.github.io/casaverse/properties.html">
+              <a href="https://zudikhin.github.io/casaverse/properties.html">
                 <span>View Properties</span>
               </a>
             </div>
@@ -129,7 +129,7 @@
               </div>
               <div class="about_block_right_bot_right">
                 <p>From helping you scout out the finest properties on the market - whether it be a cozy spot to call home, or one with excellent resale value - to getting the best deals when it comes to all your other investments, we make sure your Dubai experience is just that: an experience. So come join us today at Casaverse and take 360-degree tour of high-quality property and investing options that our city offers!</p>
-                <a href="https://lasad.github.io/casaverse/contacts.html">
+                <a href="https://zudikhin.github.io/casaverse/contacts.html">
                   <span>Meet The Team</span>
                 </a>
               </div>
@@ -155,7 +155,7 @@
       </div>
       <div class="featured_slider">
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -181,7 +181,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -207,7 +207,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -233,7 +233,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -259,7 +259,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -285,7 +285,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -311,7 +311,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -337,7 +337,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -365,7 +365,7 @@
 
       </div>
       <div class="container">
-        <a class="featured_all" href="https://lasad.github.io/casaverse/properties.html">
+        <a class="featured_all" href="https://zudikhin.github.io/casaverse/properties.html">
           <span>View All</span>
         </a>
       </div>
@@ -378,7 +378,7 @@
       </div>
       <div class="neighborhoods_wrap">
         <div class="neighborhoods_slider">
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -387,7 +387,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -398,7 +398,7 @@
 
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -407,7 +407,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -416,7 +416,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -425,7 +425,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -434,7 +434,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -443,7 +443,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -458,7 +458,7 @@
         </div>
       </div>
       <div class="container">
-        <a class="neighborhoods_all" href="https://lasad.github.io/casaverse/neighborhoods.html">
+        <a class="neighborhoods_all" href="https://zudikhin.github.io/casaverse/neighborhoods.html">
           <span>View All</span>
         </a>
       </div>
@@ -677,7 +677,7 @@
                 </div>
               </a>
             </div>
-            <a class="blog_block_wrap_link" href="https://lasad.github.io/casaverse/blog.html">
+            <a class="blog_block_wrap_link" href="https://zudikhin.github.io/casaverse/blog.html">
               <span>View All</span>
             </a>
           </div>
@@ -707,7 +707,7 @@
               </svg>
             </div>
             
-            <a class="work_block_wrap_btn" href="https://lasad.github.io/casaverse/contacts.html">
+            <a class="work_block_wrap_btn" href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
             <img class="star_one" src="img/work/star_1.svg" alt="">
@@ -722,7 +722,7 @@
       <div class="container">
         <div class="footer_block">
           <div class="footer_block_left">
-            <a href="https://lasad.github.io/casaverse">
+            <a href="https://zudikhin.github.io/casaverse">
               <img src="img/footer/logo.svg" alt="">
             </a>
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
