--- a/properties.html
+++ b/properties.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy lasad" />
+    <meta name="author" content="Yuriy zudikhin" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="css/nouislider.css">
@@ -22,19 +22,19 @@
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://lasad.github.io/casaverse/">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -52,19 +52,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://lasad.github.io/casaverse/">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -176,7 +176,7 @@
         </div>
         <div class="properties_block">
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/1.png" alt="">
               <div class="properties_block_item_img_info">
@@ -229,7 +229,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/2.png" alt="">
               <div class="properties_block_item_img_info">
@@ -282,7 +282,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/3.png" alt="">
               <div class="properties_block_item_img_info">
@@ -335,7 +335,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/1.png" alt="">
               <div class="properties_block_item_img_info">
@@ -388,7 +388,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/2.png" alt="">
               <div class="properties_block_item_img_info">
@@ -441,7 +441,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="https://lasad.github.io/casaverse/properties_single.html">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/3.png" alt="">
               <div class="properties_block_item_img_info">
