--- a/properties_single.html
+++ b/properties_single.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy lasad" />
+    <meta name="author" content="Yuriy zudikhin" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -20,19 +20,19 @@
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://lasad.github.io/casaverse/">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -41,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="https://lasad.github.io/casaverse/contacts.html">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -50,19 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://lasad.github.io/casaverse/">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -326,7 +326,7 @@
         <div class="container">
           <div class="footer_block">
             <div class="footer_block_left">
-              <a href="https://lasad.github.io/casaverse/">
+              <a href="https://zudikhin.github.io/casaverse/">
                 <img src="img/footer/logo.svg" alt="">
               </a>
               <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
