--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy lasad" />
+    <meta name="author" content="Yuriy zudikhin" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -21,19 +21,19 @@
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://lasad.github.io/casaverse/">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -42,7 +42,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="https://lasad.github.io/casaverse/contacts.html">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -51,19 +51,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://lasad.github.io/casaverse/">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
